--- a/templates/my_admin/login.html
+++ b/templates/my_admin/login.html
@@ -33,7 +33,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="module module-login span4 offset4">
-					<form class="form-vertical" action="{% url 'login' %}" method="POST">
+					<form class="form-vertical" action="{% url 'adminlogin' %}" method="POST">
                          {% csrf_token %}
 						<div class="module-head">
 							<h3>登陆</h3>
