--- a/templates/demo/index.html
+++ b/templates/demo/index.html
@@ -152,7 +152,7 @@
 						<div class="boxelment">
 							<div class="shops">
 								<a href="/service/shop/{{ line.code1.shop_num }}.html">
-									<img src="/statci/{{ line.code1.pic }}">
+									<img src="/static/{{ line.code1.pic }}">
 								</a>
 								<div class="shops-tag">
 									<a href="/service/shop/{{ line.code1.shop_num }}.html"><h3 style="overflow: hidden;text-overflow: ellipsis;white-space: nowrap;">{{ line.code1.shop_name }}</h3></a>
@@ -198,7 +198,7 @@
 						<div class="boxelment">
 							<div class="shops">
 								<a href="/service/shop/{{ line.code1.shop_num }}.html">
-									<img src="/statci/{{ line.code1.pic }}">
+									<img src="/static/{{ line.code1.pic }}">
 								</a>
 								<div class="shops-tag">
 									<a href="/service/shop/{{ line.code1.shop_num }}.html"><h3 style="overflow: hidden;text-overflow: ellipsis;white-space: nowrap;">{{ line.code1.shop_name }}</h3></a>
