--- a/templates/demo/categories.html
+++ b/templates/demo/categories.html
@@ -362,34 +362,20 @@
     })
 </script>
 <script type="text/javascript">
-    // 百度地图API功能
-    var map = new BMap.Map("emap");
-    var point = new BMap.Point(116.417854,39.921988);
-    map.centerAndZoom( point,12);
-    var data_info = {{ sdd|safe }};
-    var opts = {
-				width : 250,     // 信息窗口宽度
-				height: 80,     // 信息窗口高度
-				title : "信息窗口" , // 信息窗口标题
-				enableMessage:true//设置允许信息窗发送短息
-			   };
-      for(var i=0;i<data_info.length;i++){
-          var marker = new BMap.Marker(new BMap.Point(data_info[i][0],data_info[i][1]));  // 创建标注
-          var content = data_info[i][2];
-          map.addOverlay(marker);               // 将标注添加到地图中
-          addClickHandler(content,marker);
-      }
-      function addClickHandler(content,marker){
-          marker.addEventListener("click",function(e){
-              openInfo(content,e)}
-          );
-      }
-      function openInfo(content,e){
-          var p = e.target;
-          var point = new BMap.Point(p.getPosition().lng, p.getPosition().lat);
-		var infoWindow = new BMap.InfoWindow(content,opts);  // 创建信息窗口对象
-		map.openInfoWindow(infoWindow,point); //开启信息窗口
-	}
+     var markers = [];
+        var positions = [[116.405467, 39.907761], [116.415467, 39.907761], [116.415467, 39.917761], [116.425467,
+            39.907761], [116.385467, 39.907761]];
+
+        for (var i = 0, marker; i < positions.length; i++) {
+
+            marker = new AMap.Marker({
+                map: map,
+                icon: '//a.amap.com/jsapi_demos/static/demo-center/icons/poi-marker-' + (i + 1) + '.png',
+                position: positions[i]
+            });
+
+            markers.push(marker);
+        }
 </script>
 
 <script>
