--- a/templates/demo/map.html
+++ b/templates/demo/map.html
@@ -129,7 +129,7 @@
 		</button>
 		<ul id="dates" class="dates">
 			<li>
-				<a href="#2011" name="2011">2011</a>
+				<a href="#2011" >2011</a>
 				<hr class="onepx" />
 			</li>
 			<li>
