--- a/templates/demo/index.html
+++ b/templates/demo/index.html
@@ -316,13 +316,13 @@
 	<div class="modal-dialog" style="width: 400px;margin-top: 5%;">
 		<div class="modal-content" style="background-color: #eeeeeead;">
 			<button type="button" class="close" data-dismiss="modal" aria-hidden="true" id="close-login" style="display: none">&times;</button>
-			<form class="modal-body" action="/service/user/login/" style="margin: 15px;" method="post">
+			<form class="modal-body" action="." style="margin: 15px;">
                 {% csrf_token %}
 				<div id="form_container1">
-					<input type="text" class="form-control" placeholder="手机号/用户名" id="login_number" name="number" value="admin" style="margin-bottom: 30px" />
-					<input type="password" class="form-control" placeholder="密码" name="password" id="login_password" />
+					<input type="text" class="form-control" placeholder="手机号/用户名" id="login_number"  value="admin" style="margin-bottom: 30px" />
+					<input type="password" class="form-control" placeholder="密码" id="login_password" value="" />
 					<div id="rememberOrfindPwd"><span><input id="remember" type="checkbox" style="margin-bottom: -1.5px;"></span><span style="color:#000000;    margin-right: 80px;">记住密码</span><span style="color:#000000">忘记密码</span></div>
-					<div style="text-align: center;margin-top: 5px;margin-bottom: 28px;"><input type="submit" value="登录" class="button" id="login_btn" /></div>
+					<div style="text-align: center;margin-top: 5px;margin-bottom: 28px;"><input type="button" value="登录" class="button" id="login_btn" onclick="userlogin()" /></div>
 				</div>
 				<div style="margin-top: 50px;text-align: center;"><p>还没有账号?<a id='toRegist'>立即注册</a></p></div>
 				<div class="social">
@@ -362,6 +362,29 @@
 <script src="{% static 'js/modernizr.js' %}"></script>
 <script src="{% static 'js/apple.js' %}"></script>
 <script type="text/javascript">
+    function userlogin() {
+        var adminname =$("#login_number").val();
+        var password = $("#login_password").val();
+        $.ajax({
+                //几个参数需要注意一下
+                type: "POST",//以何种方式提交
+                datatype:"",
+                url: "/service/" ,//提交的url地址
+                data: {
+                    "username":adminname,
+                    "password":password,
+                    csrfmiddlewaretoken:'{{ csrf_token }}' //必须加，称之为钥匙
+                },
+                success: function (data) {
+                    alert("登陆成功！");
+                    window.location.href="";
+                },
+                error : function() {
+                    alert("异常！");
+                }
+        });
+    }
+
     //登录到注册
     $("#toRegist").on('click',function(){
         $("#close-login").trigger("click");
